v1.5.1 - Pending
	+ Swap 'shuffle' and 'random' to be consistent with MPD
	+ Add Catalan translation (Franc)
	+ Add Arabic translation (Ahmad)
	+ Bug: Fix play/pause with multimedia keys (Vinay)
	+ Bug: Prevent possible traceback from gobject.filename_from_utf8
	+ Bug: 'play after replace' when in shuffle mode plays 1st song, not random
	+ Bug: Fix random & repeat commands from console
	+ Bug: Songs not tagged with the album name don't show off
	+ Bug: Can not disconnect when MPD_HOST and MPD_PORT are set

v1.5 - April 3, 2008
	+ Replace album view with genre view for library
	+ Display covers for albums in artist/genre views
	+ Add menu items and shortcuts for playing library items after add/replace
	+ Allow setting artwork for streams
	+ Optional stylized album art with cases (Aidan)
	+ New, faster python mpd interface (jat)
	+ --popup argument to popup song notification (requires D-Bus) (Oleg)
	+ Show 'Untagged' artists/genres in their respective library views
	+ Allow DND of cover art from a web browser (Артем)
	+ Allow DND of music from a file manager into playlist (requires mpd 0.14)
	+ Preserve column percentages for current tab across window resizing
	+ Speed up mpd-related commandline arguments
	+ Switch back to last tab on second cover art click
	+ Retain selection in lists after removing items
	+ Hidden config option to expand notebook tabs (tabs_expanded)
	+ Set ServiceProxy cachedir for lyrics to work around ZSI bug
	+ Add Estonian translation (Mihkel)
	+ Bug: Fix multimedia keys for gnome 2.22
	+ Bug: Fix artwork for artists/albums with "/" in them (e.g. AC/DC)
	+ Bug: Fix egg trayicon with vertical system tray
	+ Bug: Weird bug in library-view
	+ Bug: Prevent failure to load if tab positions are saved as None
	+ Bug: Fix non-ascii characters in files for non-utf8 filesystems (zap)
	+ Bug: Prevent crash with certain locales like turkish (jat)
	+ Bug: Using filter causes playlist to jump to the top
	+ Bug: Fix AudioScrobblerQuery (kigurai)
